--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -2,6 +2,7 @@
     --typewriterSpeed: 2s;
     --typewriterSteps: 16;
 }
+
 html
 { 
   height: 100%;
@@ -21,7 +22,7 @@ body {
     padding-left: 0px;
     padding-right: 0px;
     box-sizing: border-box;
-    background-image: url("https://ryecorral.github.io/ImageBank/portfolioBG.jpg");
+    background-image: url("https://ryecode.github.io/ryecode/portfolio/ImageBank/portfolioBG.jpg");
     background-position: left bottom;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -209,7 +210,7 @@ body {
     background-color: transparent;
     font-size: 1rem;
     font-family:'Source Sans Pro', sans-serif;
-    color: hsl(118, 54%, 26%);
+    color: gold;
     text-shadow: 0 0 1 0 black;
     display: inline-block;
     cursor: pointer;
@@ -272,7 +273,7 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-image: linear-gradient(to right, rgba(255, 217, 0, 0.875), rgba(196, 167, 4, 0.873));
+    background-image: linear-gradient(to right, rgba(4, 4, 4, 0.875), rgba(32, 32, 31, 0.873));
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     height: 40px;
     padding: 5px;
@@ -491,7 +492,7 @@ body {
         margin-top: 0px;
         padding-left: 1rem;
         padding-right: 1rem;
-        color: aliceblue;
+        color: rgb(0, 5, 9);
         font-family: 'Poppins', sans-serif;
         box-sizing: border-box;
         padding-bottom: 0px;
