--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body {
 /* ///////////////////////// NEON BUTTON /////////////////////////////*/
 
 :root{
-    --clr-neon: hsl(117, 92%, 47%);
+    --clr-neon: hsl(45, 100%, 53%);
     --clr-bg: hsl(320, 43%, 96%);;
 }
 
@@ -195,7 +195,7 @@ body {
 }
 /* /////////////////////////////////////// NEON BUTTON NAV /////////////////// */
 :root{
-    --clr-neon1: hsl(117, 92%, 47%);
+    --clr-neon1: hsl(45, 100%, 53%);
     --clr-bg1: hsl(0, 100%, 1%);
 }
 
@@ -210,7 +210,7 @@ body {
     background-color: transparent;
     font-size: 1rem;
     font-family:'Source Sans Pro', sans-serif;
-    color: gold;
+    color: hsl(45, 100%, 53%);
     text-shadow: 0 0 1 0 black;
     display: inline-block;
     cursor: pointer;
@@ -242,10 +242,10 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    box-shadow:  0 0 2em 0.5em rgb(222, 253, 69);
+    box-shadow:  0 0 2em 0.5em hsl(45, 100%, 53%);
     opacity: 0;
     transition: ease 100ms linear;
-    background-color: rgb(222, 253, 69);
+    background-color: hsl(45, 100%, 53%);
     z-index: -1;
 }
 
@@ -395,7 +395,7 @@ body {
       padding: 0.5em 0;
       width: 100%;
       color: aliceblue;
-      background: linear-gradient(to left, rgba(129, 109, 20, 0.819), rgba(173, 145, 6, 0.725))
+      background: linear-gradient(to right, rgba(4, 4, 4, 0.875), rgba(32, 32, 31, 0.873));
       
     }
 
@@ -421,7 +421,7 @@ body {
     animation-iteration-count: initial;
     transform: translate(0rem);
     opacity: 0;
-    box-shadow: 0 0 1em white;
+    box-shadow: 0 0 1em hsl(45, 100%, 53%);
 }
 
 .RyeLogo:hover
@@ -444,7 +444,7 @@ body {
         z-index: -1;
         margin-left: -125px;
         padding: 0;
-        box-shadow: 0 0 1em gold;
+        box-shadow: 0 0 1em hsl(45, 100%, 53%);
 
       }
 
@@ -479,7 +479,7 @@ body {
       font-weight: 900;
       text-shadow: 
       0 0 0.11em whitesmoke,
-      0 0 1em gold;
+      0 0 1em hsl(45, 100%, 53%);
       text-align: center;
       margin: 2px 0 2px 0;
       width: 100%;
@@ -525,7 +525,7 @@ body {
         padding: 0;
         background: rgba(black, .7);
         text-align: center;
-        box-shadow: 0 0 0.5em 0 gold;
+        box-shadow: 0 0 0.5em 0 hsl(45, 100%, 53%);
     }
     
     .card::after 
@@ -538,8 +538,8 @@ body {
         right: 1.25em;    
         transform: scale(1, 0);
         transition: transform ease-in-out 250ms;
-        border-left: 1.5px solid darkgreen;
-        border-right: 1.5px solid darkgreen;
+        border-left: 1.5px solid hsl(45, 100%, 53%);
+        border-right: 1.5px solid hsl(45, 100%, 53%);
     
     }
     .card::before
@@ -552,8 +552,8 @@ body {
         right: 1.25em; 
         transform: scale(0, 1);
         transition: transform ease-in-out 250ms;
-        border-top: 1.5px solid darkgreen;
-        border-bottom: 1.5px solid darkgreen;
+        border-top: 1.5px solid hsl(45, 100%, 53%);
+        border-bottom: 1.5px solid hsl(45, 100%, 53%);
     }
     
     .card:hover::before
@@ -645,18 +645,18 @@ body {
   display: flex;
   width: max-content;
   font-size: small;
-  background: rgb(0, 213, 255);
-  border: rgb(0, 213, 255) 0.125em solid;
+  background: hsl(45, 100%, 53%);
+  border: hsl(45, 100%, 53%) 0.125em solid;
   text-shadow: 
   0 0 0,
   0 0 0;
-  box-shadow: 0 0 0.5em 0 rgb(0, 213, 255);
+  box-shadow: 0 0 0.5em 0 hsl(45, 100%, 53%);
 }
 #moreBtn::before {
   pointer-events: none; /*use this string to avoid pointer change outside button */
   content: '';
   position: absolute;
-  background: rgb(0, 213, 255);
+  background: hsl(45, 100%, 53%);
   top: 90%;
   left: 0;
   width: 100%;
@@ -674,17 +674,17 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  box-shadow:  0 0 2em 0.5em rgb(0, 213, 255);
+  box-shadow:  0 0 2em 0.5em hsl(45, 100%, 53%);
   opacity: 0;
   transition: ease 100ms linear;
-  background-color: rgb(0, 213, 255);
+  background-color: hsl(45, 100%, 53%);
   z-index: -1;
 }
 
 #moreBtn:hover, 
 #moreBtn:focus {    
   color: white;
-  text-shadow: 0 0 0.1em darkblue;    
+  text-shadow: 0 0 0.1em black;    
 }
 
 #moreBtn:hover::before,
@@ -713,7 +713,7 @@ body {
   calc(var(--typewriterSpeed) + 0.75s) forwards;
   background: transparent;
   border: none;
-  text-shadow: 1 gold;
+  text-shadow: 1 hsl(45, 100%, 53%);
   display: flex;
 }
 
@@ -724,7 +724,7 @@ body {
   margin: 50px 0 10px 0;
   background: linear-gradient(to right bottom,#03487a 50%, rgba(0, 3, 5, 0.9));
   border-radius: 10px;
-  box-shadow: 0 0 0.5em 0 gold;  
+  box-shadow: 0 0 0.5em 0 hsl(45, 100%, 53%);  
   width: 100%;
   padding: 30px;
   z-index: 1;
@@ -738,7 +738,7 @@ body {
     font-family: "Source Code Pro", monospace;
     position: relative;
     width: 100%;
-    color: gold;
+    color: hsl(45, 100%, 53%);
     font-weight: 900;
 }
 
