July 19 updates mainly css

--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ body {
 
 .neon-button:hover, 
 .neon-button:focus {    
-    color: var(--clr-bg);
+    color: black;
     text-shadow: none;    
 }
 
@@ -319,7 +319,7 @@ body {
   .menu-button::before,
   .menu-button::after {
     display: block;
-    background-color: rgb(1, 1, 29);
+    background-color: hsl(45, 100%, 53%);
     position: absolute;
     height: 4px;
     width: 30px;
@@ -370,7 +370,6 @@ body {
       justify-content: center;
       align-items: center;
     }
-
     #menu-toggle ~ .menu li 
     {
       height: 0;
@@ -394,20 +393,18 @@ body {
       margin: 0;
       padding: 0.5em 0;
       width: 100%;
-      color: aliceblue;
+      color: hsl(45, 100%, 53%);
       background: linear-gradient(to right, rgba(4, 4, 4, 0.875), rgba(32, 32, 31, 0.873));
       
     }
-
     .menu > li:not(:last-child) {
       border-bottom: 1px solid #444;
-
     }
   }
 
   #active 
   {
-    color: #2f81f7;
+    color: rgb(6, 136, 249);
     text-shadow: 0 0 1em rgb(254, 248, 248),
   }
 
@@ -430,7 +427,7 @@ body {
     scale: 1.35;
   }
 
-    /* ///////////////////////////////// LOADING ANIMATION ////////////////// */
+  /* ///////////////////////////////// LOADING ANIMATION ////////////////// */
     .loading
       {
         border-radius: 50%;  
@@ -450,12 +447,22 @@ body {
 
     #spinner 
        {  
-        border-radius: 50%;  
         animation: scaleOut 0.75s ease-out 
         calc(var(--typewriterSpeed) + .75s) forwards;
         animation-iteration-count: initial;
         text-align: center;
       }
+    
+      @media (max-width: 770px) {
+        .loading 
+        {
+          width:198px;
+          height:198px;
+          margin-left: -90px;
+        }
+      }
+
+    
 
     /* #bouncing
     {
@@ -475,7 +482,7 @@ body {
       calc(var(--typewriterSpeed) + 1.5s) forwards;
       animation-iteration-count: infinite;
       animation-timing-function: var(--typewriterSteps);
-      color: darkblue;
+      color: black;
       font-weight: 900;
       text-shadow: 
       0 0 0.11em whitesmoke,
@@ -490,8 +497,8 @@ body {
     #container {
         background: transparent;
         margin-top: 0px;
-        padding-left: 1rem;
-        padding-right: 1rem;
+        /* padding-left: 1rem;
+        padding-right: 1rem; */
         color: rgb(0, 5, 9);
         font-family: 'Poppins', sans-serif;
         box-sizing: border-box;
@@ -590,12 +597,13 @@ body {
     .cardText
     {
       position: absolute;
-      top: 48%;
+      top: 57%;
       left: 50%;
       transform: translate(-50%, -50%);
-      color: rgb(9, 9, 100);
-      text-shadow: white;
-      /* transition: opacity ease-out 250ms; */
+      color: black;
+      text-shadow: 
+      0 0 0.11em whitesmoke,
+      0 0 1em hsl(45, 100%, 53%);
       width: 90%;
 
       font-weight: 600;
@@ -628,24 +636,35 @@ body {
   text-align: center;
   margin: 20px;
   opacity: 1;
-  height: 350px;
+  height: 250px;
 
+}
+
+.sub {
+  margin-top: 20px;
+  margin-left: 40px;
 }
 
 #moreBtn 
 {
-  position: absolute;
+  position: relative;
   top: 82%;
-  left: 38%;
-  transform: translate(-50%, -50%);
-  color: black;
+  left: 65%;
+  right: 0%;
+  color: hsl(45, 100%, 53%);
+  text-shadow: 2 black;
   transition: opacity ease-out 250ms;
   width: 50%;
   z-index: 1;
-  display: flex;
+  display: inline-flexbox;
   width: max-content;
   font-size: small;
-  background: hsl(45, 100%, 53%);
+  /* background: transparent; */
+  background-image: url("https://ryecode.github.io/portfolio/ImageBank/galaxyBG.png");
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
   border: hsl(45, 100%, 53%) 0.125em solid;
   text-shadow: 
   0 0 0,
@@ -683,7 +702,7 @@ body {
 
 #moreBtn:hover, 
 #moreBtn:focus {    
-  color: white;
+  color: black;
   text-shadow: 0 0 0.1em black;    
 }
 
@@ -695,6 +714,31 @@ body {
 #moreBtn:hover::after,
 #moreBtn:focus::after {
   opacity: 1;
+}
+
+@media (max-width: 770px) {
+  #moreBtn 
+  {
+    left: 15%;
+    color: hsl(45, 100%, 53%);
+    text-shadow: 2 black;
+    background-image: url("https://ryecode.github.io/portfolio/ImageBank/galaxyBG.png");
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+
+    border: hsl(45, 100%, 53%) 0.125em solid;
+    box-shadow: 0 0 0.5em 0 hsl(45, 100%, 53%);
+  }
+  #moreBtn::before {
+    background: hsl(45, 100%, 53%);
+  }  
+  #moreBtn::after {
+    box-shadow:  0 0 2em 0.5em hsl(45, 100%, 53%);
+    background-color: hsl(45, 100%, 53%);
+    z-index: -1;
+  }  
 }
 
 #subscribe:hover { 
@@ -722,8 +766,8 @@ body {
 .about
 {
   margin: 50px 0 10px 0;
-  background: linear-gradient(to right bottom,#03487a 50%, rgba(0, 3, 5, 0.9));
-  border-radius: 10px;
+  background: linear-gradient(to right bottom,hsla(45, 100%, 53%) 70%, rgb(129, 98, 4));
+  /* border-radius: 10px; */
   box-shadow: 0 0 0.5em 0 hsl(45, 100%, 53%);  
   width: 100%;
   padding: 30px;
@@ -738,7 +782,7 @@ body {
     font-family: "Source Code Pro", monospace;
     position: relative;
     width: 100%;
-    color: hsl(45, 100%, 53%);
+    color: black;
     font-weight: 900;
 }
 
@@ -753,11 +797,28 @@ body {
 }
 
 .aboutTitle::before {
-    background-color: #03487a;
+    background-color: hsla(45, 100%, 53%);
     animation: typewriter 5s steps(17) 2s forwards;
     animation-iteration-count: infinite;
     animation-timing-function: var(--typewriterSteps);
+}
 
+#ryePic {
+  float: right;
+  width: 25%;
+  height: 400px;
+  border-radius: 50px;
+  margin-left: 15px;
+  margin-bottom: 10px;
+}
+
+@media (max-width: 770px) {
+  #ryePic {
+    width: 100%;
+    height: 200px;
+    border-radius: 50px;
+
+  }
 }
 
 /* ///////////////////////////////// FOOTER /////////////////////////////////  */
@@ -816,7 +877,7 @@ body {
       position: relative;
       font-weight: 600;
       opacity: 0;
-      animation: scale 2s ease-in 3.5s forwards;
+      animation: scale 2s ease-in 5.8s forwards;
       margin-right: 10px;
   
       text-shadow: 
