--- a/style.css
+++ b/style.css
@@ -640,17 +640,11 @@ body {
 
 }
 
-.sub {
-  margin-top: 0px;
-  margin-left: 30px;
-  padding-top: 10px;
-}
-
 #moreBtn 
 {
   position: relative;
-  top: 70%;
-  left: 65%;
+  top: 75%;
+  left: 30%;
   right: 0%;
   color: hsl(45, 100%, 53%);
   text-shadow: 2 black;
@@ -660,7 +654,7 @@ body {
   display: inline-flexbox;
   width: max-content;
   font-size: small;
-  background-image: url("https://ryecode.github.io/portfolio/ImageBank/ProjectsBG.jpg");
+  background-image: url("https://ryecode.github.io/portfolio/ImageBank/galaxyBG.png");
   background-position: bottom;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -789,10 +783,10 @@ body {
 @media (max-width: 770px) {
   #moreBtn 
   {
-    left: 40%;
+    left: 20%;
     color: hsl(45, 100%, 53%);
     text-shadow: 2 black;
-    background-image: url("https://ryecode.github.io/portfolio/ImageBank/ProjectsBG.jpg");
+    background-image: url("https://ryecode.github.io/portfolio/ImageBank/galaxyBG.png");
     background-position: bottom;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -851,7 +845,10 @@ body {
   background: transparent;
   border: none;
   text-shadow: 1 hsl(45, 100%, 53%);
-  display: flex;
+  /* display: flex; */
+  margin-top: 5px;
+  margin-left: 30px;
+  padding-top: 10px;
 }
 
 /* ///////////////////////////////// ABOUT PAGE /////////////////////////////////  */
