--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 html
 { 
   height: 100%;
+  background-color: black;
   /* background-image: url("https://ryecorral.github.io/ImageBank/AboutBG.jpg");
   background-position: left bottom;
   background-repeat: no-repeat;
