--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 html
 { 
   height: 100%;
-  background-color: black;
   /* background-image: url("https://ryecorral.github.io/ImageBank/AboutBG.jpg");
   background-position: left bottom;
   background-repeat: no-repeat;
@@ -463,16 +462,6 @@ body {
         }
       }
 
-    
-
-    /* #bouncing
-    {
-      border-radius: 50%;  
-      animation: bounce 1s ease;
-      animation-iteration-count: infinite;
-      z-index: 1;
-
-    } */
 
     .welcome
     {
@@ -507,14 +496,6 @@ body {
         display: inline-block;
         overflow: hidden; 
     } 
-
-    /* #content
-    {
-      overflow: hidden;
-      width: 100%;
-      text-align: center;
-      display: inline-block;
-    } */
 
     /* ///////////////////////////////// CARDS /////////////////////////////////  */
     .cardContainer
@@ -617,20 +598,6 @@ body {
     opacity: 1;
 
 }
-/* 
-.cardTitle 
-{
-    font-size: 2rem;
-    text-align: center;
-    color: red;
-    margin-bottom: 0;
-    opacity: 1;
-    position: absolute;
-    top: 10%;
-    transform: translate(-50%, -50%);
-    color: red;
-    transition: opacity ease-out 250ms;
-} */
 
 .cardBody
 {
@@ -968,7 +935,7 @@ body {
       position: relative;
       font-weight: 600;
       opacity: 0;
-      animation: scale 2s ease-in 5.8s forwards;
+      animation: scale 0.5s linear 5.8s forwards;
       margin-right: 10px;
   
       text-shadow: 
@@ -1063,15 +1030,15 @@ to {
   
   }
 
-  @keyframes crashRight { 
-    to {opacity: 1;}
+@keyframes crashRight { 
+   to {opacity: 1;}
     
-          0% {transform: translateX(100%);}
-          25% {transform: translateX(0);}
-          50% {transform: translateX(50px);}
-          100% {transform: translateX(0);}    
-    
-    }
+        0% {transform: translateX(100%);}
+        25% {transform: translateX(0);}
+        50% {transform: translateX(50px);}
+        100% {transform: translateX(0);}    
+  
+  }
 
 @keyframes scale { 
 to {opacity: 1;}
