--- a/style.css
+++ b/style.css
@@ -404,7 +404,7 @@ body {
 
   #active 
   {
-    color: rgb(6, 136, 249);
+    color: rgb(14, 214, 54);
     text-shadow: 0 0 1em rgb(254, 248, 248),
   }
 
@@ -554,6 +554,53 @@ body {
     {
         transform: scale(1, 1.05);
     }
+
+    .cardAbout {
+      position: relative;
+      margin: 15px 0px 0px 0px;
+      padding: 0;
+      background: rgba(black, .7);
+      text-align: center;
+      box-shadow: 0 0 0.5em 0 black;
+  }
+  
+  .cardAbout::after 
+  {
+      content: '';
+      position: absolute;
+      top: 1.25em;
+      bottom: 1.25em;
+      left: 1.25em;
+      right: 1.25em;    
+      transform: scale(1, 0);
+      transition: transform ease-in-out 250ms;
+      border-left: 3px solid green;
+      border-right: 3px solid green;
+  
+  }
+  .cardAbout::before
+  {
+      content: '';
+      position: absolute;
+      top: 1.25em;
+      bottom: 1.25em;
+      left: 1.25em;
+      right: 1.25em; 
+      transform: scale(0, 1);
+      transition: transform ease-in-out 250ms;
+      border-top: 3px solid green;
+      border-bottom: 3px solid green;
+  }
+  
+  .cardAbout:hover::before
+  {
+      transform: scale(1.05, 1);
+  }
+  
+  .card1:hover::after
+  {
+      transform: scale(1, 1.05);
+  }
     
     .cardImage 
     {
@@ -693,7 +740,7 @@ body {
   width: max-content;
   font-size: small;
   background-image: url("https://ryecode.github.io/portfolio/ImageBank/ProjectsBG.jpg");
-  background-position: bottom;
+  background-position: top;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -863,11 +910,21 @@ body {
 
 #ryePic {
   float: right;
-  width: 25%;
-  height: 400px;
+  width: 20%;
+  height: 250px;
   border-radius: 50px;
   margin-left: 15px;
   margin-bottom: 10px;
+}
+
+#skills {
+  float: left;
+  width: 20%;
+  height: 250px;
+  border-radius: 50px;
+  margin-right: 15px;
+  margin-bottom: 10px;
+  display: flex;
 }
 
 @media (max-width: 770px) {
@@ -875,7 +932,12 @@ body {
     width: 100%;
     height: 200px;
     border-radius: 50px;
+  }
 
+  #skills {
+    width: 100%;
+    height: 200px;
+    border-radius: 50px;
   }
 }
 
