--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ body {
 
 .neon-button {
     background-color: transparent;
-    font-size: 1rem;
+    font-size: 1.25rem;
     font-family:'Source Sans Pro', sans-serif;
     color: var(--clr-neon);
     display: inline-block;
@@ -400,8 +400,16 @@ body {
     .menu > li:not(:last-child) {
       border-bottom: 1px solid #444;
     }
+
+
   }
 
+  .accordion-body{
+    margin-left: 80px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+ 
   #active 
   {
     color: rgb(14, 214, 54);
@@ -460,6 +468,7 @@ body {
           height:198px;
           margin-left: -90px;
         }
+
       }
 
 
@@ -527,8 +536,8 @@ body {
         right: 1.25em;    
         transform: scale(1, 0);
         transition: transform ease-in-out 250ms;
-        border-left: 1.5px solid hsl(45, 100%, 53%);
-        border-right: 1.5px solid hsl(45, 100%, 53%);
+        border-left: 3.5px solid hsl(45, 100%, 53%);
+        border-right: 3.5px solid hsl(45, 100%, 53%);
     
     }
     .card::before
@@ -541,8 +550,8 @@ body {
         right: 1.25em; 
         transform: scale(0, 1);
         transition: transform ease-in-out 250ms;
-        border-top: 1.5px solid hsl(45, 100%, 53%);
-        border-bottom: 1.5px solid hsl(45, 100%, 53%);
+        border-top: 3.5px solid hsl(45, 100%, 53%);
+        border-bottom: 3.5px solid hsl(45, 100%, 53%);
     }
     
     .card:hover::before
@@ -866,17 +875,18 @@ body {
   padding-top: 10px;
 }
 
-/* ///////////////////////////////// ABOUT PAGE /////////////////////////////////  */
+/* ///////////////////////////////// PROFILE PAGE /////////////////////////////////  */
  
 .about
 {
   margin: 30px 0 10px 0;
-  background: linear-gradient(to right bottom,hsla(45, 100%, 53%) 70%, rgb(129, 98, 4));
+  background: linear-gradient(to right bottom,rgb(206, 157, 12) 70%, rgb(125, 94, 2));
   /* border-radius: 10px; */
   box-shadow: 0 0 0.5em 0 hsl(45, 100%, 53%);  
   width: 100%;
   padding: 30px;
   z-index: 1;
+  display: flexbox;
 }
 
 .aboutTitle 
@@ -885,7 +895,6 @@ body {
     font-weight: bolder;
     position: relative;
     font-family: "Source Code Pro", monospace;
-    position: relative;
     width: 100%;
     color: rgb(24, 2, 96);
     font-weight: 900;
@@ -902,7 +911,7 @@ body {
 }
 
 .aboutTitle::before {
-    background-color: hsla(45, 100%, 53%);
+    background-color: rgb(206, 157, 12);
     animation: typewriter 5s steps(17) 2s forwards;
     animation-iteration-count: infinite;
     animation-timing-function: var(--typewriterSteps);
@@ -915,6 +924,8 @@ body {
   border-radius: 50px;
   margin-left: 15px;
   margin-bottom: 10px;
+  animation: flip 5s;
+  animation-iteration-count: infinite;
 }
 
 #skills {
@@ -933,12 +944,19 @@ body {
     height: 200px;
     border-radius: 50px;
   }
-
-  #skills {
-    width: 100%;
-    height: 200px;
-    border-radius: 50px;
+  
+  .accordion-body {
+    margin-left: -20px;
   }
+
+  .tilt-box-wrap {
+    width: 500px;
+    height: 200px;
+    position: relative;
+    perspective: 1000px;
+    margin-left: 1%;
+  }
+  
 }
 
 /* ///////////////////////////////// FOOTER /////////////////////////////////  */
@@ -1053,10 +1071,14 @@ body {
   .neon-button2:focus::after {
       opacity: 1;
   }
+
   
 
-
   /* /////////////////// KEYFRAMES ////////////////////*/
+@keyframes flip {
+  0% { transform:  rotateY(0deg); }
+  100% { transform: rotateY(360deg); }
+  }
 @keyframes typewriter {
   to {
       left: 100%;
@@ -1151,3 +1173,69 @@ to {opacity: 1;}
   90% { transform: translate(1px, 2px) rotate(0deg); }
   100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
+
+
+
+/* TILT BOX EFFECT */
+
+.tilt-box-wrap{
+  width: 90%;
+  height: 400px;
+  position: relative;
+  perspective: 1000px;
+  
+}
+
+.tilt-box-wrap:hover{
+  transition: all 0.3s linear;
+  transform: scale(1.1);
+}
+
+.tilt-box{
+  width: 100%;
+  height: 100%;
+  background: #04527b;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+  color: #fff;
+  font-size: 90px;
+  text-transform: uppercase;
+  transition: all 0.6s ease-out;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+  margin-left: 30px;
+  
+}
+.tilt-box strong{
+  transform: translateZ(40px);
+}
+
+.t_over{
+  width: 33.333%;
+  height: 33.333%;
+  position: absolute;
+  z-index: 1;
+}
+
+.t_over:nth-child(1){ left: 0; top: 0;}
+.t_over:nth-child(2){ left: 33.333%; top: 0;}
+.t_over:nth-child(3){ left: 66.666%; top: 0;}
+.t_over:nth-child(4){ left: 0; top: 33.333%;}
+.t_over:nth-child(5){ left: 33.333%; top: 33.333%;}
+.t_over:nth-child(6){ left: 66.666%; top: 66.666%;}
+.t_over:nth-child(7){ left: 0; top: 66.666%;}
+.t_over:nth-child(8){ left: 33.333%; top: 66.666%;}
+.t_over:nth-child(9){ left: 66.666%; top: 66.666%;}
+
+.t_over:nth-child(1):hover ~ .tilt-box{ transform: rotateX(-20deg) rotateY(20deg);}
+.t_over:nth-child(2):hover ~ .tilt-box{ transform: rotateX(-20deg) rotateY(0deg);}
+.t_over:nth-child(3):hover ~ .tilt-box{ transform: rotateX(-20deg) rotateY(-20deg);}
+.t_over:nth-child(4):hover ~ .tilt-box{ transform: rotateX(0deg) rotateY(20deg);}
+.t_over:nth-child(5):hover ~ .tilt-box{ transform: rotateX(0deg) rotateY(0deg);}
+.t_over:nth-child(6):hover ~ .tilt-box{ transform: rotateX(0deg) rotateY(-20deg);}
+.t_over:nth-child(7):hover ~ .tilt-box{ transform: rotateX(20deg) rotateY(20deg);}
+.t_over:nth-child(8):hover ~ .tilt-box{ transform: rotateX(20deg) rotateY(0deg);}
+.t_over:nth-child(9):hover ~ .tilt-box{ transform: rotateX(20deg) rotateY(-20deg);}
