--- a/style.css
+++ b/style.css
@@ -1033,6 +1033,71 @@ body {
   opacity: 1;
 }
 
+
+/* ///////////////////////////////// PROJECTS SECTION /////////////////////////////////  */
+
+.cards {
+  width: 300px;
+  height: 500px;
+  position: relative;
+  isolation: isolate;
+  overflow: hidden;
+  border-radius: 20px;
+  margin-left: 25px;
+  z-index: 1;
+}
+.card-image {
+  height: 100%;
+  width: auto;
+  min-width: 100%;
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+}
+.hover-container {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 10px;
+  padding-top: 70%;
+  background-image: linear-gradient(0,rgba(240, 169, 1, 0.9),rgb(240, 169, 1,0.9),rgb(240, 169, 1,0.9),rgb(240, 169, 1,0.9),rgb(240, 169, 1,0.9),rgb(240, 169, 1,0.9),rgb(240, 169, 1,0.9),rgb(240, 169, 1,0.9),rgb(240, 169, 1,0.9),rgb(240, 169, 1,0.7),rgb(240, 169, 1,0.4),rgb(240, 169, 1,0.2),rgb(240, 169, 1,0.1),transparent);
+  color: black;
+  opacity: 0;
+  transition: opacity 0.45s, height 0.5s;
+}
+.cards:hover > .hover-container {
+  opacity: 100%;
+  pointer-events: all;
+  height: 100%;
+}
+.hover-header {
+  width: 50%;
+  font-size: 30px;
+}
+.hover-btn {
+  width: 30%;
+  color: black;
+  display: grid;
+  place-items: center;
+  border-radius: 25px;
+  background-color: white;
+  height: 30px;
+  text-decoration: none;
+  font-size: 25px;
+  font-weight: 500;
+  box-sizing: content-box;
+  padding:5px 10px;
+}
+.hover-description {
+  width: 100%;
+  font-size: small;
+  color: black;
+}
+
 /* ///////////////////////////////// FOOTER /////////////////////////////////  */
 
     #footer
