--- a/style.css
+++ b/style.css
@@ -548,6 +548,15 @@ body {
       transform: scale(1, 1.05);
   }
 
+  .certificate {
+    position: relative;
+    margin: 15px 0px 0px 0px;
+    padding: 0;
+    background: rgba(black, .7);
+    text-align: center;
+    box-shadow: 0 0 0.5em 0 hsl(45, 100%, 53%);
+}
+
 /* FOR MY PROFILE */
   .profileTitle
   {
@@ -930,15 +939,15 @@ display: flexbox;
 
 .aboutTitle 
 {
-  font-size: 3rem;
+  font-size: 3.5rem;
   font-weight: bolder;
   position: relative;
   font-family: "Source Code Pro", monospace;
   width: max-content;
   color: black;
-  text-shadow: 
+  /* text-shadow: 
   0 0 0.11em whitesmoke,
-  0 0 1em hsl(45, 100%, 53%);
+  0 0 1em hsl(208, 88%, 77%); */
   text-align: center;
   padding-top: 20px;
   padding-left: 10px;
