--- a/style.css
+++ b/style.css
@@ -692,7 +692,7 @@ height: 250px;
 {
 position: relative;
 top: 85%;
-left: 25%;
+left: -1%;
 right: 0%;
 color: hsl(45, 100%, 53%);
 text-shadow: 2 black;
@@ -763,7 +763,7 @@ opacity: 1;
 {
 position: relative;
 top: 90%;
-left: 25%;
+left: 23%;
 right: 0%;
 color: hsl(45, 100%, 53%);
 text-shadow: 2 black;
@@ -976,7 +976,7 @@ display: flexbox;
 
 #ryePic {
 float: center;
-width: 20%;
+width: 15%;
 height: 250px;
 border-radius: 50px;
 margin-left: 10px;
@@ -984,6 +984,7 @@ margin-bottom: 10px;
 margin-top: 10px;
 animation: flip 5s;
 animation-iteration-count: infinite;
+box-shadow: 0 0 0.5em 0 hsl(45, 100%, 53%); 
 }
 
 #skills {
@@ -1045,7 +1046,7 @@ opacity: 1;
 
 .aboutRye 
 {
-  transform: translateX(-35px);
+  transform: translateX(-39.5px);
 }
 
 }
